bk_ida/gccida/c3/gen_lexical_block_die
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lexical_block_die/src/dwarf2out.c:11152:41: error: use of undeclared identifier 'off_66511C'
sprintf( v18, "*.%s%u", ( const char *)&off_66511C, stmt->identifier.id.len >> 2); 
                                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_lexical_block_die/src/obj/dwarf2out.o] Error 1
